Add Firebase onboarding and Space switching
